--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Sounds</title>
 </head>
 <div class="keys">
-  <button class="key" id="a" disabled>A</button>
-  <button class="key" id="s" disabled>S</button>
-  <button class="key" id="d" disabled>D</button>
-  <button class="key" id="f" disabled>F</button>
-  <button class="key" id="g" disabled>G</button>
-  <button class="key" id="h" disabled>H</button>
-  <button class="key" id="j" disabled>J</button>
-  <button class="key" id="k" disabled>K</button>
-  <button class="key" id="l" disabled>L</button>
+  <button class="key" id="a">A</button>
+  <button class="key" id="s">S</button>
+  <button class="key" id="d">D</button>
+  <button class="key" id="f">F</button>
+  <button class="key" id="g">G</button>
+  <button class="key" id="h">H</button>
+  <button class="key" id="j">J</button>
+  <button class="key" id="k">K</button>
+  <button class="key" id="l">L</button>
 </div>
 
 <div class="sounds">
